Criado sistema de alteração

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -34,3 +34,9 @@
     margin-left: 10vw;
     margin-right: 10vw; 
 }
+
+#sec2 {
+    margin-left: 10vw;
+    margin-right: 10vw;
+    height: 93vh;
+}
